# embassy-litex

./: .gitignore  .gitmodules  LICENSE  README.md  run_sim.sh  sim.py
embassy-litex/: Cargo.toml
embassy-litex-macros/: Cargo.toml
embassy-litex-macros/src/: lib.rs
embassy-litex-macros/src/macros/: main.rs
embassy-litex/src/: executor.rs  interrupt.rs  lib.rs  register.rs  serial.rs  soc_headers.rs  timer.rs  trace.rs
example/: Cargo.toml  build.sh  build_debug.sh  link.x  memory.x
example/.cargo/: config
example/src/: main.rs
