[package]
name = "embassy-litex-macros"
version = "0.1.0"
edition = "2021"


[dependencies]

embassy-executor-macros = { version = "0.6" }

syn = { version = "2.0.15", features = ["full", "visit"] }
quote = "1.0.9"
darling = "0.20.1"
proc-macro2 = "1.0.29"


[lib]
proc-macro = true


[features]
nightly = []
