[package]
name = "embassy-litex"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-litex-macros = { version = "0.1.0", path = "../embassy-litex-macros" }

embassy-sync = { version = "0.6", features = [] }
embassy-executor = { version = "0.7.0", features = [] }
embassy-executor-macros = { version = "0.6"  }
embassy-time-driver = { version = "0.2.0", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { version = "0.1.0",  features = ["_generic-queue"] }

embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.4.0"  }

critical-section = "1.1.0"
portable-atomic = "1.11.0"

riscv = { path="../ext/riscv/riscv", features = ["critical-section-single-hart"] }
riscv-rt = { path="../ext/riscv/riscv-rt" , features = ["single-hart"] }

log = "0.4.27"


[dev-dependencies]


[build-dependencies]


[features]

